objects/Sum_Of_Amount__c.object
<CustomObject>
    <label>Sum Of Amount</label>
    <nameField>
        <label>Sum Of Amount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sum Of Amounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shape__c</fullName>
        <label>Shape</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Circle</fullName>
                </value>
                <value>
                    <fullName>Triangle</fullName>
                </value>
                <value>
                    <fullName>Rectangle</fullName>
                </value>
                <value>
                    <fullName>Square</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Fee</label>
        <referenceTo>Student_Fee__c</referenceTo>
        <relationshipLabel>Sum Of Amounts</relationshipLabel>
        <relationshipName>Sum_Of_Amounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_No_of_Amount__c</fullName>
        <label>Total No of Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>